--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EMAIL=Cristiano.nzr@gmail.com
 PASSWORD=R-E8JfWz
 LOGIN_URL=https://platform.stellar-holdings.co/login
+WEBSOCKET_URL = ws://localhost:8080
