--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "dotenv": "^16.4.7",
         "nodemon": "^3.1.9",
-        "puppeteer": "^24.0.0"
+        "puppeteer": "^24.0.0",
+        "ws": "^8.18.0"
     }
 }
