--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EMAIL=Cristiano.nzr@gmail.com
 PASSWORD=R-E8JfWz
 LOGIN_URL=https://platform.stellar-holdings.co/login
-WEBSOCKET_URL = ws://localhost:8080
+WEBSOCKET_URL = ws://127.0.0.1:8765
